accept targets with dependencies