@@ -13,7 +13,10 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class GenerateModuleInfoTask extends DefaultTask {
 
@@ -38,10 +41,18 @@ public class GenerateModuleInfoTask extends DefaultTask {
         Files.copy(infoFile, getModuleInfoJavaFile().get().getAsFile().toPath());
     }
 
-    // TODO handle dependency module paths
     public static ToolProviderSupport.Result generateModuleInfoJava(boolean isOpenModule, File targetJar, File outputDir, Set<File> dependencies) {
         final String moduleTypeOption = isOpenModule ? "--generate-open-module" : "--generate-module-info";
-        return ToolProviderSupport.run("jdeps", moduleTypeOption, outputDir.getAbsolutePath(), targetJar.getAbsolutePath());
+        final ArrayList<String> args = new ArrayList<>(createModulePathArg(dependencies));
+        args.addAll(List.of(moduleTypeOption, outputDir.getAbsolutePath(), targetJar.getAbsolutePath()));
+        return ToolProviderSupport.run("jdeps", args);
+    }
+
+    private static List<String> createModulePathArg(Set<File> dependencies) {
+        if (dependencies.isEmpty()) {
+            return List.of();
+        }
+        return List.of("--module-path", String.join(":", dependencies.stream().map(File::toString).collect(Collectors.toList())), "--add-modules", "ALL-MODULE-PATH");
     }
 
     @InputFile
